# simple-trading-bot

./: .env.example  .gitignore  Readme.md  main.py  pyproject.toml
bot/: cycle.py  exchange.py  order_db.py
bot/commands/: check.py  new.py  update.py
server/: app.py
server/templates/: index.html
services/: database.py  logger.py
