[tool.poetry]
name = "bot-spot-1"
version = "0.1.0"
description = ""
authors = ["cryptomancien <crytp0mancien@x.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
termcolor = "^2.4.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"